agent can move all direction? no loop tho lol

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 253,
    "id": "14183651",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 254,
    "id": "aaaabec6",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 255,
    "id": "8f93deec",
    "metadata": {},
    "outputs": [
@@ -88,33 +88,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "id": "2703c24a",
+   "execution_count": 256,
+   "id": "3f4ed4bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (Up)\n",
+      "\u001b[41mS\u001b[0mFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "step = random.choice([0,1,2,3,4])"
+    "# random step\n",
+    "step = random.choice([0,1,2,3])\n",
+    "# or we can use the gymnasium's api for action step\n",
+    "action = environment.action_space.sample()\n",
+    "\n",
+    "# move my agent\n",
+    "environment.step(action)\n",
+    "print(environment.render())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "3f4ed4bb",
+   "execution_count": 273,
+   "id": "de7ae0ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (Right)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HFF\u001b[41mG\u001b[0m\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_state, reward, terminated, truncated, info = environment.step(2)\n",
+    "print(environment.render())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "id": "fc2c7619",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0, 0.0, False, False, {'prob': 1.0})"
+       "{'prob': 1.0}"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "environment.step(step)"
+    "info"
    ]
   }
  ],
