agent can move one episode or any number of episodes

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 5,
    "id": "14183651",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 6,
    "id": "aaaabec6",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 7,
    "id": "8f93deec",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 19,
    "id": "3f4ed4bb",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  (Up)\n",
+      "  (Left)\n",
       "\u001b[41mS\u001b[0mFFF\n",
       "FHFH\n",
       "FFFH\n",
@@ -107,6 +107,7 @@
    ],
    "source": [
     "# random step\n",
+    "action_space = ['Left','Down','Right','Up']\n",
     "step = random.choice([0,1,2,3])\n",
     "# or we can use the gymnasium's api for action step\n",
     "action = environment.action_space.sample()\n",
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 9,
    "id": "de7ae0ce",
    "metadata": {},
    "outputs": [
@@ -127,10 +128,10 @@
      "output_type": "stream",
      "text": [
       "  (Right)\n",
-      "SFFF\n",
+      "SF\u001b[41mF\u001b[0mF\n",
       "FHFH\n",
       "FFFH\n",
-      "HFF\u001b[41mG\u001b[0m\n",
+      "HFFG\n",
       "\n"
      ]
     }
@@ -142,23 +143,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
-   "id": "fc2c7619",
+   "execution_count": 13,
+   "id": "d851e9da",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'prob': 1.0}"
+       "(0, {'prob': 1})"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "info"
+    "state = environment.reset()\n",
+    "state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "fc2c7619",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "new_iteration\n",
+      "new_iteration\n",
+      "new_iteration\n",
+      "new_iteration\n",
+      "new_iteration\n",
+      "new_iteration\n"
+     ]
+    }
+   ],
+   "source": [
+    "episodes = 1\n",
+    "learning_rate = 0.9 # For learning more on new values rather than old ones\n",
+    "discount = 0.1 # To focus on more short term reward\n",
+    "\n",
+    "for _ in range(episodes):\n",
+    "    state, _ = environment.reset()\n",
+    "    done = False\n",
+    "\n",
+    "    while not done:\n",
+    "        action = environment.action_space.sample()\n",
+    "        new_state, reward, done, truncated, info = environment.step(action=action)  \n",
+    "        # Formula for updating q-table\n",
+    "        # qtable[state, action] = qtable[state, action] + learning_rate * (reward + discount * np.max(qtable[new_state]) - qtable[state, action])\n",
+    "        print('new_iteration')"
    ]
   }
  ],
