--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 646,
    "id": "14183651",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,13 @@
     "# open-ai gym\n",
     "import gymnasium\n",
     "import numpy as np\n",
-    "import random as random"
+    "import random as random\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 647,
    "id": "aaaabec6",
    "metadata": {},
    "outputs": [
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 648,
    "id": "8f93deec",
    "metadata": {},
    "outputs": [
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 649,
    "id": "3f4ed4bb",
    "metadata": {},
    "outputs": [
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 650,
    "id": "de7ae0ce",
    "metadata": {},
    "outputs": [
@@ -128,7 +129,7 @@
      "output_type": "stream",
      "text": [
       "  (Right)\n",
-      "SF\u001b[41mF\u001b[0mF\n",
+      "S\u001b[41mF\u001b[0mFF\n",
       "FHFH\n",
       "FFFH\n",
       "HFFG\n",
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 651,
    "id": "d851e9da",
    "metadata": {},
    "outputs": [
@@ -153,7 +154,7 @@
        "(0, {'prob': 1})"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 651,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,38 +166,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 652,
    "id": "fc2c7619",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "new_iteration\n",
-      "new_iteration\n",
-      "new_iteration\n",
-      "new_iteration\n",
-      "new_iteration\n",
-      "new_iteration\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "episodes = 1\n",
-    "learning_rate = 0.9 # For learning more on new values rather than old ones\n",
-    "discount = 0.1 # To focus on more short term reward\n",
+    "episodes = 1000\n",
+    "learning_rate = 0.5 # For learning more on new values rather than old ones\n",
+    "discount = 0.6 # To focus on more future reward since there is only one reward at the end\n",
+    "sequence = []\n",
     "\n",
     "for _ in range(episodes):\n",
     "    state, _ = environment.reset()\n",
     "    done = False\n",
     "\n",
     "    while not done:\n",
-    "        action = environment.action_space.sample()\n",
-    "        new_state, reward, done, truncated, info = environment.step(action=action)  \n",
+    "        \n",
+    "        if np.argmax(qtable[state]) > 0:\n",
+    "            action = np.argmax(qtable[state])\n",
+    "        else:\n",
+    "            action = environment.action_space.sample()\n",
+    "        \n",
+    "        sequence.append(action)\n",
+    "\n",
+    "        new_state, reward, done,truncated, info = environment.step(action=action)\n",
+    "\n",
     "        # Formula for updating q-table\n",
-    "        # qtable[state, action] = qtable[state, action] + learning_rate * (reward + discount * np.max(qtable[new_state]) - qtable[state, action])\n",
-    "        print('new_iteration')"
+    "        qtable[state, action] = qtable[state, action] + learning_rate * (reward + discount * np.max(qtable[new_state]) - qtable[state, action])\n",
+    "\n",
+    "        state = new_state\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9501839",
+   "metadata": {},
+   "source": [
+    "The agent can complete the game without touching any obstacles "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 653,
+   "id": "2b7b7292",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (Right)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HFF\u001b[41mG\u001b[0m\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(environment.render())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 654,
+   "id": "e223e878",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Left', 'Down', 'Right', 'Up']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(action_space)"
    ]
   }
  ],
