Updated Q-Table after training

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 646,
+   "execution_count": 657,
    "id": "14183651",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 647,
+   "execution_count": 658,
    "id": "aaaabec6",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 648,
+   "execution_count": 659,
    "id": "8f93deec",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 649,
+   "execution_count": 660,
    "id": "3f4ed4bb",
    "metadata": {},
    "outputs": [
@@ -97,8 +97,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  (Left)\n",
-      "\u001b[41mS\u001b[0mFFF\n",
+      "  (Right)\n",
+      "S\u001b[41mF\u001b[0mFF\n",
       "FHFH\n",
       "FFFH\n",
       "HFFG\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 650,
+   "execution_count": 661,
    "id": "de7ae0ce",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
      "output_type": "stream",
      "text": [
       "  (Right)\n",
-      "S\u001b[41mF\u001b[0mFF\n",
+      "SF\u001b[41mF\u001b[0mF\n",
       "FHFH\n",
       "FFFH\n",
       "HFFG\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 651,
+   "execution_count": 662,
    "id": "d851e9da",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "(0, {'prob': 1})"
       ]
      },
-     "execution_count": 651,
+     "execution_count": 662,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 652,
+   "execution_count": 663,
    "id": "fc2c7619",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 653,
+   "execution_count": 664,
    "id": "2b7b7292",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 654,
+   "execution_count": 665,
+   "id": "ad4b82e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated Q-Table\n",
+      "[[0.      0.07776 0.      0.     ]\n",
+      " [0.      0.      0.      0.     ]\n",
+      " [0.      0.      0.      0.     ]\n",
+      " [0.      0.      0.      0.     ]\n",
+      " [0.      0.1296  0.      0.     ]\n",
+      " [0.      0.      0.      0.     ]\n",
+      " [0.      0.      0.      0.     ]\n",
+      " [0.      0.      0.      0.     ]\n",
+      " [0.      0.      0.216   0.     ]\n",
+      " [0.      0.36    0.      0.     ]\n",
+      " [0.      0.      0.      0.     ]\n",
+      " [0.      0.      0.      0.     ]\n",
+      " [0.      0.      0.      0.     ]\n",
+      " [0.      0.      0.6     0.     ]\n",
+      " [0.      0.      1.      0.     ]\n",
+      " [0.      0.      0.      0.     ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Updated Q-Table\")\n",
+    "print(qtable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 666,
    "id": "e223e878",
    "metadata": {},
    "outputs": [
